Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-18847

qt-creator-opensource-src-4.4.0/src/tools/iostool/iosdevicemanager.cpp:1225: bad expression ?

XMLWordPrintable

      qt-creator-opensource-src-4.4.0/src/tools/iostool/iosdevicemanager.cpp:1225]: (style) Boolean result is used in bitwise operation. Clarify expression with parentheses.

      Source code is

      if ((c < '0' || c > '9') && (c < 'a' || c > 'f') && (c < 'A' | c > 'F')) {

      Maybe better code

      if ((c < '0' || c > '9') && (c < 'a' || c > 'f') && (c < 'A' || c > 'F')) {

       

        For Gerrit Dashboard: QTCREATORBUG-18847
        # Subject Branch Project Status CR V

            vikas Vikas Pachdha
            dcb David Binderman
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes