iOS: Fix incorrect bitwise operator usage

Task-number: QTCREATORBUG-18847
Change-Id: I3b9dacf5e9bb6d0c5e556ac1ba984db4076e18ae
Reviewed-by: Eike Ziller <eike.ziller@qt.io>